update: menu links

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </header>
       <ul class="nav-koala">
         <li class="nav-koala-txt">
-          <a class="koala-btn-gp" href="https://.com#about"
+          <a class="koala-btn-gp" href="https://mgpas.github.io/portifolio/#about"
             ><img id="koala-btn" src="./assets/koalaabout.svg" alt="Sobre mim"
           /></a>
           <p class="koala-flag">Sobre mim</p>
@@ -33,7 +33,7 @@
           <p class="koala-flag">Experiências</p>
         </li>
         <li class="nav-koala-txt">
-          <a class="koala-btn-gp" href="https://.com#projects"
+          <a class="koala-btn-gp" href="https://mgpas.github.io/portifolio/#projects"
             ><img id="koala-btn" src="./assets/koalaproj.svg" alt="Projetos"
           /></a>
           <p class="koala-flag">Projetos</p>
@@ -44,17 +44,17 @@
       <nav class="nav-bar">
         <div class="nav-title" title="I'M GABRIELA (Front-End Developer)">
           <!--link do site aqui-->
-          <a class="nav-title-txt" href="http://127.0.0.1:5500/#header">I'M GABRIELA</a>
+          <a class="nav-title-txt" href="https://mgpas.github.io/portifolio/#header">I'M GABRIELA</a>
         </div>
         <ul class="nav-txt">
           <li class="nav-txt-content">
-            <a active href="http://127.0.0.1:5500/#about">Sobre mim</a>
+            <a href="hhttps://mgpas.github.io/portifolio/#about">Sobre mim</a>
           </li>
           <li class="nav-txt-content">
-            <a href="http://127.0.0.1:5500/#experiences">Experiências</a>
+            <a href="https://mgpas.github.io/portifolio/#experiences">Experiências</a>
           </li>
           <li class="nav-txt-content">
-            <a href="http://127.0.0.1:5500/#projects">Projetos</a>
+            <a href="https://mgpas.github.io/portifolio/#projects">Projetos</a>
           </li>
         </ul>
       </nav>
