update: menu links 2

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <p class="koala-flag">Sobre mim</p>
         </li>
         <li class="nav-koala-txt">
-          <a class="koala-btn-gp" href="https://.com#experiences"
+          <a class="koala-btn-gp" href="https://mgpas.github.io/portifolio/#experiences"
             ><img id="koala-btn" src="./assets/koalaexp.svg" alt="Experiências"
           /></a>
           <p class="koala-flag">Experiências</p>
